fix slider item overflow

--- a/css/landquest-main.less
+++ b/css/landquest-main.less
@@ -1584,6 +1584,8 @@ html#map-embed {
 				margin: 0;
 				padding: 0;
 				text-align: center;
+				position: relative;
+				overflow: hidden;
 				h2 {
 					font-size: 42px;
 					line-height: 50px;
